--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -29,7 +29,9 @@
       </div><!-- /.navbar-collapse -->
   </div><!-- /.container -->
 </nav>
-<%= yield %>
 
+<div class="container">
+  <%= yield %>
+</div>
 </body>
 </html>
