--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,1 +1,4 @@
-<h2>Home</h2>
+<div class="jumbotron text-center">
+    <h1>Welecome to Dev Match</h1>
+    <h3>A membership site whre entrepreneurs can mee developers</h3>
+</div>
