--- a/app/views/contact_mailer/contact_email.html.erb
+++ b/app/views/contact_mailer/contact_email.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
     <header>
-        <title></title>
+        <title>Contact reveive message</title>
     </header>
     <body>
         <p>Your have recievd a message fomr the app site contact form, from <%= "#{ @name }, #{ @email }. " %> </p>
