--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,6 +1,6 @@
  <div class="row">
     
-     <div class="col-md-4 col-md-offese-4">
+     <div class="col-md-4 col-md-offset-4">
           <div class="well">
         <%= form_for @contact do |f| %>
                 <div class="form-group">
