--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,7 @@
   <%= csrf_meta_tags %>
 </head>
 <body>
+  
 <nav class="navbar navbar-inverse navbar-static-top" role="navigation">
   <div class="container">
       <div class="navbar-header">
@@ -23,9 +24,17 @@
          <% end %>
         
       </div>
-    
+     
       <!-- Collect the nav links, forms, and other content for toggling -->
       <div class="collapse navbar-collapse" id="main-nav-collapse">
+         <div class="nav navbar-nav navbar-right">
+           <% if current_user %>
+            <%= button_to "Log Out", destroy_user_session_path, method: :delete, class: 'btn btn-primary navbar-btn' %>
+           <% else %>
+           <%= link_to "Log In", new_user_session_path, class: 'btn btn-primary navbar-btn', method: :get %>
+            <%= link_to "Sign Up", new_user_registration_path, class: 'btn btn-success navbar-btn', method: :get %>
+      <% end %>
+         </div>
           <ul class="nav navbar-nav navbar-right">
             <li><%= link_to "About", about_path %></li>
             <li><%= link_to "Contacts", new_contact_path %></li>
