--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,22 @@
 <div class="jumbotron text-center">
-    <h1>Welecome to Dev Match</h1>
-    <h3>A membership site whre entrepreneurs can mee developers</h3>
+    <h1>Welcome to Dev Match</h1>
+    <h2>A membership site whre entrepreneurs can see developers</h2>
+   
+</div>
+
+<div class="row">
+    <div class="col-md-6">
+        <div class="well">
+           <h2 class="text-center">Basic Memberhip</h2> 
+             <h3>Sign up for free and get basic ascewss to the commuyity</h3>
+             <%= link_to "Sign up free", new_user_registration_path, class: 'btn btn-primary btn-lg btn-block' %>
+        </div>
+        </div>
+     <div class="col-md-6">
+     <div class="well">
+          <h2 class="text-center"> Pro Memberhip</h2> 
+            
+                <h3>Sign up for pro account for $10/month and get access to the community information</h3>
+                 <%= link_to "Sign up Pro", new_user_registration_path, class: 'btn btn-success btn-lg btn-block' %>
+        </div></div>
 </div>
