--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -9,7 +9,7 @@
         <div class="well">
            <h2 class="text-center">Basic Memberhip</h2> 
              <h3>Sign up for free and get basic ascewss to the commuyity</h3>
-             <%= link_to "Sign up free", new_user_registration_path, class: 'btn btn-primary btn-lg btn-block' %>
+             <%= link_to "Sign up Basic", new_user_registration_path(plan: @basic_plan.id), class: 'btn btn-primary btn-lg btn-block' %>
         </div>
         </div>
      <div class="col-md-6">
@@ -17,6 +17,6 @@
           <h2 class="text-center"> Pro Memberhip</h2> 
             
                 <h3>Sign up for pro account for $10/month and get access to the community information</h3>
-                 <%= link_to "Sign up Pro", new_user_registration_path, class: 'btn btn-success btn-lg btn-block' %>
+                 <%= link_to "Sign up Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
         </div></div>
 </div>
