--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,35 +1,27 @@
 <div class="row">
-  <div class="col-md-4 col-md-offset-4">
-<div class="well">
-<h2>Sign up</h2>
-
-<%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
-  <%= devise_error_messages! %>
-
-  <div class="field">
-    <%= f.label :email %><br />
-    <%= f.email_field :email, autofocus: true, class: 'form-control' %>
+  <div class="col-md-6 col-md-offset-3 ">
+    <% if params[:plan] =='4' %>
+    <h1 class="text-center">Pro Account</h1>
+    <h4 class="text-center">Sign up for pro account for $10/month and get access to the community information</h4>
+    <% else %>
+     <h1 class="text-center">Basic Account</h1>
+     <h4 class="text-center">Sign up for free and get basic ascewss to the commuyity</h4>
+    <% end %>
   </div>
-
-  <div class="field">
-    <%= f.label :password %>
-    <% if @validatable %>
-    <em>(<%= @minimum_password_length %> characters minimum)</em>
-    <% end %><br />
-    <%= f.password_field :password, autocomplete: "off",  class: 'form-control' %>
+  
+  <div class="col-md-6 col-md-offset-3">
+    <div class="well">
+      
+        <h2>Sign up</h2>
+        
+        <% if params[:plan] =='4' %>
+           <%= render "pro_form" %>
+         <% else %>        
+           <%= render "basic_form" %>
+         <% end %>
+         
+    <%= render "devise/shared/links" %>
+    
+    </div>
   </div>
-
-  <div class="field">
-    <%= f.label :password_confirmation %><br />
-    <%= f.password_field :password_confirmation, autocomplete: "off" %>
-  </div>
-
-  <div class="actions">
-    <%= f.submit "Sign up", class: 'btn btn-success'  %>
-  </div>
-<% end %>
-
-<%= render "devise/shared/links" %>
-</div>
-</div>
 </div>
