--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -17,3 +17,11 @@ body {
 .formPanel {
   background:#fff;
 }
+
+.alert-notice {
+    color:#8a6d3b;
+    background-color: #fcf8e3;
+    border-color: #faebcc;
+    
+    
+}
