--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,6 @@
+<%= link_to "Create your profile", new_user_profile_path(current_user) if current_user  %>
+
+
 <div class="jumbotron text-center">
     <h1>Welcome to Dev Match</h1>
     <h2>A membership site whre entrepreneurs can see developers</h2>
