added profiles form and create action

--- a/app/views/profiles/new.html.erb
+++ b/app/views/profiles/new.html.erb
@@ -4,7 +4,7 @@
           <p class="text-center">Be a prart of the Dev Match community and fill our your profile</p>
           <div class="well">
          
-            <%= form_for Profile, url: user_profile_path do |f| %>
+            <%= form_for @profile, url: user_profile_path do |f| %>
             
               <div class="form-group">
                   <%= f.label :first_name %>
@@ -18,7 +18,7 @@
        
               <div class="form-group">
                   <%= f.label :job_title %>
-                  <%= f.select :jot_title, ['Developer', 'Entreprenur', 'investor'], {}, class: 'form-control'%>
+                  <%= f.select :job_title, ['Developer', 'Entreprenur', 'investor'], {}, class: 'form-control'%>
               </div>
               <div class="form-group">
                   <%= f.label :phone_number %>
