--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,13 +1,34 @@
-<%= link_to "Create your profile", new_user_profile_path(current_user) if current_user %>
+
 
 
 <div class="jumbotron text-center">
     <h1>Welcome to Dev Match</h1>
     <h2>A membership site whre entrepreneurs can see developers</h2>
-   
 </div>
 
 <div class="row">
+    <% if user_signed_in? %>
+    <div class="col-md-6">
+        <div class="well">
+              <h2 class="text-center">Your Profile</h2> 
+      <% if current_user.profile %>
+          <%# link to edit the user profile %>
+           
+          <%= link_to "Edit your profile", "#", class: "btn btn-default btn-lg btn-block" %>
+           <%= link_to "View your profile", user_path(current_user), class: "btn btn-default btn-lg btn-block" %>
+      <%else %>
+        <%= link_to "Create your profile", new_user_profile_path(current_user), class: "btn btn-default btn-lg btn-block"  %>
+      <% end %>
+      </div></div>
+      
+      <div class="col-md-6">
+        <div class="well">
+            <h2 class="text-center">The Community</h2>
+            <p>Visit the community to meet other developer, entrepenuers, and investors</p>
+            <%= link_to"Visit the commutiy", "#", class:"btn btn-default btn-lg btn-block" %>
+         </div></div>
+            
+    <% else %>
     <div class="col-md-6">
         <div class="well">
            <h2 class="text-center">Basic Memberhip</h2> 
@@ -22,4 +43,5 @@
                 <h3>Sign up for pro account for $10/month and get access to the community information</h3>
                  <%= link_to "Sign up Pro", new_user_registration_path(plan: @pro_plan.id), class: 'btn btn-success btn-lg btn-block' %>
         </div></div>
-</div>
+      <% end %>
+       </div>
