--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -11,12 +11,11 @@
     <div class="col-md-6">
         <div class="well">
               <h2 class="text-center">Your Profile</h2> 
-      <% if current_user.profile %>
-          <%# link to edit the user profile %>
-           
-          <%= link_to "Edit your profile", "#", class: "btn btn-default btn-lg btn-block" %>
+          <% if current_user.profile %>
+          <%= link_to "Edit your profile", edit_user_profile_path(user_id: current_user.id), class: "btn btn-default btn-lg btn-block" %>
            <%= link_to "View your profile", user_path(current_user), class: "btn btn-default btn-lg btn-block" %>
       <%else %>
+      <p>Create your profile so to view the community</p>
         <%= link_to "Create your profile", new_user_profile_path(current_user), class: "btn btn-default btn-lg btn-block"  %>
       <% end %>
       </div></div>
