--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -6,7 +6,7 @@
               </div>
               <div class="form-group">
                   <%= f.label :last_name %>
-                  <%= f.text_field :first_name, class: 'form-control'%>
+                  <%= f.text_field :last_name, class: 'form-control'%>
               </div>
      
        
