--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,8 +1,16 @@
-
-<%= @user.profile.first_name %><%= @user.profile.last_name %><br/>
-<%= @user.profile.job_title %><br/>
+<div class="col-md-3 text-center">
+<%# image_tag @user.profile.avatar.url %>
+</div>
+<div class="col-md-6">
+<h1><%= @user.profile.first_name %><%= @user.profile.last_name %><br/></h1>
+<h3><span class="job-title-icon"><%= job_title_icon %></span><%= @user.profile.job_title %><br/></h3>
+<div class="well user-description"><%= @user.profile.description %><br/></div>
 <% if current_user.plan_id == 4 %>
+<div class="well user-contact">
+    <h1>Contact Info</h1>
     <%= @user.profile.phone_number %><br/>
     <%= @user.profile.contact_email %><br/>
+    </div>
 <% end %>
-<%= @user.profile.description %><br/>
+
+</div>
