added user profile index page

--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -8,6 +8,7 @@
     display:inline-block;
     border-radius:5px;
 }
+//User profile index  styles
 .well.user-description {
     background:green;
     color:white;
@@ -15,4 +16,8 @@
 .well.user-contact {
     background:#2E88FF;
     color:white;
+}
+
+.well.white-bg {
+    background:#fff;
 }
