--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -2,6 +2,7 @@
     
      <div class="col-md-4 col-md-offset-4">
           <div class="well">
+              <h1>Contact US</h1>
         <%= form_for @contact do |f| %>
                 <div class="form-group">
                     <%= f.label :name %>
@@ -15,7 +16,7 @@
                     <%= f.label :comments %>
                     <%= f.text_area :comments, class: 'form-control' %>
                 </div>
-                <%= f.submit 'Submit' , class: 'btn btn-default' %>
+                <%= f.submit 'Submit' , class: 'btn btn-primary' %>
         <% end %>
         </div>
           </div>  
