--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -12,11 +12,11 @@
         <div class="well">
               <h2 class="text-center">Your Profile</h2> 
           <% if current_user.profile %>
-          <%= link_to "Edit your profile", edit_user_profile_path(user_id: current_user.id), class: "btn btn-default btn-lg btn-block" %>
-           <%= link_to "View your profile", user_path(current_user), class: "btn btn-default btn-lg btn-block" %>
+          <%= link_to "Edit your profile", edit_user_profile_path(user_id: current_user.id), class: "btn btn-primary btn-lg btn-block" %>
+           <%= link_to "View your profile", user_path(current_user), class: "btn btn-success btn-lg btn-block" %>
       <%else %>
       <p>Create your profile so to view the community</p>
-        <%= link_to "Create your profile", new_user_profile_path(current_user), class: "btn btn-default btn-lg btn-block"  %>
+        <%= link_to "Create your profile", new_user_profile_path(current_user), class: "btn btn-success btn-lg btn-block"  %>
       <% end %>
       </div></div>
       
@@ -24,7 +24,7 @@
         <div class="well">
             <h2 class="text-center">The Community</h2>
             <p>Visit the community to meet other developer, entrepenuers, and investors</p>
-            <%= link_to"Visit the commutiy", "#", class:"btn btn-default btn-lg btn-block" %>
+            <%= link_to"Visit the commutiy", users_path, class:"btn btn-warning btn-lg btn-block" %>
          </div></div>
             
     <% else %>
