--- a/app/views/profiles/_form.html.erb
+++ b/app/views/profiles/_form.html.erb
@@ -32,7 +32,7 @@
               </div>
                 <div class="form-group">
                   
-                  <%= f.submit "Update Prifile", class: 'bnt-primary'%>
+                  <%= f.submit "Update Prifile", class: 'btn btn-primary'%>
                   
               </div>
          <% end %>
