--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,9 @@
 <div class="col-md-6">
 <h1><%= @user.profile.first_name %><%= @user.profile.last_name %><br/></h1>
 <h3><span class="job-title-icon"><%= job_title_icon %></span><%= @user.profile.job_title %><br/></h3>
-<div class="well user-description"><%= @user.profile.description %><br/></div>
+<div class="well user-description">
+    <%= @user.profile.description %><br/>
+    </div>
 <% if current_user.plan_id == 4 %>
 <div class="well user-contact">
     <h1>Contact Info</h1>
