nhansed community page styles & added link to community in applications.html.erb

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -38,6 +38,7 @@
       <% end %>
          </div>
           <ul class="nav navbar-nav navbar-right">
+            <li><%= link_to"Commutiy", users_path %></li>
             <li><%= link_to "About", about_path %></li>
             <li><%= link_to "Contacts", new_contact_path %></li>
           </ul>
