--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -12,7 +12,9 @@
                           <div class="col-md-6">
                               <%= link_to user do %>
                               <h2><%= user.profile.first_name %>&nbsp;<%= user.profile.last_name %></h2><br/> <% end %>
-                              <p><%= user.profile.job_title %></p>
+                             
+                              <p><%= user.profile.job_title %>
+                              <% if user.plan.id == 4 %><span class="label label-danger">PRO</span></p><% end %>
                             
                             </div>
                         </div>
